--- a/views/vue/package.json
+++ b/views/vue/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.2.6",
     "bootstrap": "^5.3.0-alpha1",
+    "cookiejs": "^2.1.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
